Fix readable icon position at source page

--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -1372,3 +1372,8 @@ code {
     height: 1em;
     vertical-align: -0.125em !important;
 }
+
+.inline-icon {
+    height: 1em;
+    vertical-align: -0.125em !important;
+}
